<resources>
    <string name="app_name">Metronome</string>

    Main Activity
    <string name="bp_minute">Beats Per Minute</string>
    <string name="bp_measure">Beats Per Measure</string>
    <string name="tap_to_rhythm_btn">Tap \n Tempo</string>
    <string name="btn_plus">+</string>
    <string name="btn_minus">-</string>
    <string name="go_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="zero">0</string>

    <string name="vibration_prefs_key" translatable="false">vibration_prefs</string>
    <string name="flashlight_prefs_key" translatable="false">flashlight_prefs</string>
    <string name="sound_prefs_key" translatable="false">sound_prefs</string>

    <string name="vibrate_title">Vibrate</string>
    <string name="flash_light_title">Flashlight</string>
    <string name="sound_title">Sound</string>

</resources>
