<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.stickyblob.metronome.MainActivity">

    <TextView
        android:id="@+id/beats_per_minute_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/bp_minute"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:id="@+id/plus_bp_minute_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/plus_minus_btn_selector"
        android:elevation="4dp"
        android:minHeight="40dp"
        android:minWidth="40dp"
        android:onClick="plusBPMinuteBtnClicked"
        android:text="@string/btn_plus"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/bp_minute_et"
        app:layout_constraintRight_toLeftOf="@+id/bp_minute_et"/>

    <EditText
        android:id="@+id/bp_minute_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="14dp"
        android:ems="3"
        android:gravity="center"
        android:inputType="number"
        android:text="0"
        app:layout_constraintBaseline_toBaselineOf="@+id/minus_bp_minutes_btn"
        app:layout_constraintRight_toLeftOf="@+id/minus_bp_minutes_btn"
        android:layout_marginEnd="14dp"/>

    <Button
        android:id="@+id/minus_bp_minutes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/plus_minus_btn_selector"
        android:elevation="4dp"
        android:minHeight="40dp"
        android:minWidth="40dp"
        android:onClick="minusBPMinuteBtnClicked"
        android:text="@string/btn_minus"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beats_per_minute_btn"/>

    <TextView
        android:id="@+id/beats_per_measure_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/bp_measure"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"/>


    <Button
        android:id="@+id/plus_bp_measure_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/plus_minus_btn_selector"
        android:elevation="4dp"
        android:minHeight="40dp"
        android:minWidth="40dp"
        android:onClick="plusBPMeasureBtnClicked"
        android:text="@string/btn_plus"
        android:textColor="@android:color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/bp_measure_et"
        app:layout_constraintRight_toLeftOf="@+id/bp_measure_et"/>

    <EditText
        android:id="@+id/bp_measure_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:ems="3"
        android:gravity="center"
        android:inputType="number"
        android:text="0"
        app:layout_constraintBaseline_toBaselineOf="@+id/minus_bp_measure_btn"
        app:layout_constraintRight_toLeftOf="@+id/minus_bp_measure_btn"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/minus_bp_measure_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/plus_minus_btn_selector"
        android:elevation="4dp"
        android:minHeight="40dp"
        android:minWidth="40dp"
        android:onClick="minusBPMeasureBtnClicked"
        android:text="@string/btn_minus"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beats_per_measure_btn"/>

    <View
        android:id="@+id/view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/play_circle"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/divider2"/>

    <Button
        android:id="@+id/go_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/tap_to_rhythm_btn_selector"
        android:onClick="startBtnClicked"
        android:paddingBottom="18sp"
        android:paddingTop="18sp"
        android:text="@string/go_btn"
        android:textColor="@android:color/white"
        android:layout_marginLeft="72dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/adView"/>

    <Button
        android:id="@+id/stop_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/tap_to_rhythm_btn_selector"
        android:onClick="stopBtnClicked"
        android:paddingBottom="18sp"
        android:paddingTop="18sp"
        android:text="@string/stop_btn"
        android:visibility="invisible"
        android:textColor="@android:color/white"
        android:layout_marginLeft="72dp"
        android:layout_marginRight="72dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/adView"/>

    <Button
        android:id="@+id/tap_to_rhythm_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/tap_to_rhythm_btn_selector"
        android:padding="10dp"
        android:text="@string/tap_to_rhythm_btn"
        android:textColor="@android:color/white"
        android:layout_marginRight="72dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/adView"/>


    <ImageView
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tap_to_rhythm_btn"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"/>

    <TextView
        android:id="@+id/beat_in_measure_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintLeft_toLeftOf="@+id/view"
        app:layout_constraintRight_toRightOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:text="4"/>

</android.support.constraint.ConstraintLayout>